# dist-systems

./: PLANNING.md  README.md  docker-compose.yml
app-golang/: Dockerfile  go.mod  go.sum
app-golang/cmd/api/: main.go
app-golang/cmd/worker/: main.go
app-golang/internal/database/: database.go
app-nodejs/: Dockerfile  package.json
app-nodejs/src/: api.js  database.js  worker.js
app-rust/: .env.example  Cargo.toml  Dockerfile  build-server.sh  build-worker.sh
app-rust/src/: main.rs
app-rust/src/data/: words.txt
app-rust/src/database/: operations.rs  pool.rs
app-rust/src/models/: event.rs
app-rust/src/routing/: route.rs
app-rust/src/worker/: mod.rs
migrations/: 01-create-base-tables.sql
nginx/: nginx.conf
