[package]
name = "app"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = true

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "mysql",
    "migrate",
    "tls-rustls",
] }

dotenvy = "0.15"
thiserror = "1"
