[package]
name = "axum_mysql_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
rand = "0.8"

[[bin]]
name = "axum_mysql_app"
path = "src/main.rs"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "mysql",
    "migrate",
    "tls-rustls",
] }

dotenvy = "0.15"
thiserror = "1"
